[package]
name = "cc_server"
version = "0.1.0"
edition = "2024"

[dependencies]

# web
actix-web = "4"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.55.0", features = ["tokio", "tcp", "yamux", "noise", "macros", "identify", "ping", "kad", "rendezvous", "mdns"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
hex = "0.4" # For displaying PeerId easily 
multiaddr = "0.18.2" # To parse multiaddrs 
colored = "3.0.0"
md5 = "0.7.0"
rand = "0.9.1"
serde_yaml = "0.9.34"
yansi = "1.0.1"
log = "0.4.27"


blake3 = "1.4"
sled = "0.34.7"
actix-web-actors = "4.3.1"
actix = "0.13.5"
